# instagram

./: CHANGELOG.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: lib.rs
src/web_api/: behaviour.rs  client.rs  credentials.rs  domain.rs  error.rs  mod.rs  prelude.rs  response.rs
src/web_api/client/: authenticated.rs  builder.rs  mod.rs
src/web_api/domain/: deserializer.rs  infos.rs  mod.rs
src/web_api/options/: mod.rs
src/web_api/response/: deserializer.rs  mod.rs
tests/: tests.rs
tests/web_api_client/: authenticated_client.rs  create_client.rs  response_init_rollout.html  response_login_2FA.json  response_user_feed.json  response_user_info.json  unauthenticated_client.rs
