[package]
name = "instagram"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Instagram private api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
tokio = { version = "*", features = ["macros"]}
mockito = "*"
