[package]
name = "instagram"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Instagram private api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3"
lazy_static = "1.4"
cookie = "0.13"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"]}
mockito = "0.25"
assert-impl = "*"
env_logger = "0.7"
